# assignment-tfidf

./: idf.py  pyproject.toml
tests/: test_nlp_idf2.py
